Alignment fixed

--- a/src/app/feed/post/post.component.css
+++ b/src/app/feed/post/post.component.css
@@ -385,7 +385,7 @@ li {
   margin-top: 6px;
   margin-bottom: 6px;
   float: right;
-  margin-right: 13px;
+  margin-right: 14px;
   display: grid;
   place-items: center;  
   transition: background-color 250ms ease;
